--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,8 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "date-fns": "^2.28.0",
+    "dayjs": "^1.11.0",
     "lodash": "^4.17.21",
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
