--- a/front/jsconfig.json
+++ b/front/jsconfig.json
@@ -1,8 +1,21 @@
 {
-    "include": [
-        "src/**/*",
-        "views/**/*"
-, "src/.old/devtools.js"    ],
+    "compilerOptions": {
+        "target": "es5",
+        "module": "esnext",
+        "baseUrl": "./",
+        "moduleResolution": "node",
+        "paths": {
+            "@/*": [
+                "src/*"
+            ]
+        },
+        "lib": [
+            "esnext",
+            "dom",
+            "dom.iterable",
+            "scripthost"
+        ]
+    },
     "exclude": [
         "node_modules"
     ]
