--- a/front/package.json
+++ b/front/package.json
@@ -29,6 +29,7 @@
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "vue": "^2.6.11",
+    "vue-axios": "^3.4.1",
     "vue-country-flag": "^2.3.2",
     "vue-i18n": "^8.26.3",
     "vue-router": "^3.2.0",
