--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.31",
     "@fortawesome/free-solid-svg-icons": "^5.15.0",
     "@fortawesome/vue-fontawesome": "^2.0.0",
+    "@vue-stripe/vue-stripe": "^4.4.2",
     "@vue/devtools-api": "^6.0.2",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
