--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.6",
+    "@vue/devtools-api": "^6.1.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
