--- a/vue_three/package.json
+++ b/vue_three/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mdi/font": "^6.7.96",
+    "@vue-stripe/vue-stripe": "^4.4.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "dayjs": "^1.11.3",
