--- a/vue_three/package.json
+++ b/vue_three/package.json
@@ -27,6 +27,7 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@rollup/plugin-dynamic-import-vars": "^1.4.3",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/cli-plugin-eslint": "^5.0.4",
     "@vue/eslint-config-standard": "^6.1.0",
