--- a/front2/package.json
+++ b/front2/package.json
@@ -8,6 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "@mdi/font": "^6.7.96",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
@@ -42,7 +47,9 @@
       "plugin:vue/vue3-essential",
       "eslint:recommended"
     ],
-    "ignorePatterns": ["**/node_modules/*"],
+    "ignorePatterns": [
+      "**/node_modules/*"
+    ],
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
