--- a/front2/package.json
+++ b/front2/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@mdi/font": "^6.7.96",
+    "@vueuse/core": "^8.7.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
