--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "pinia": "^2.0.14",
     "vue": "^3.2.13",
     "vue-i18n": "^9.1.10",
+    "vue-inner-image-zoom": "^2.0.0",
     "vue-router": "^4.0.16",
     "webfontloader": "^1.6.28"
   },
