--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,36 @@
           "ignoreComments": true
         }
       ],
+
+      "brace-style": "error",
+      "block-scoped-var": "error",
+      "consistent-return": "warn",
+      "curly": "error",
+      "eqeqeq": "error",
+      "default-case": "error",
+      "default-case-last": "warn",
+      "dot-notation": "error",
+      "func-style": ["warn", "declaration"],
+      "no-array-constructor": "error",
+      "no-use-before-define": "error",
+      "no-undef-init": "error",
+      "no-undefined": "warn",
+      "no-bitwise": "error",
+      "no-eq-null": "error",
+      "no-fallthrough": "error",
+      "no-floating-decimal": "error",
+      "no-loop-func": "error",
+      "no-param-reassign": "error",
+      "no-redeclare": "error",
+      "no-return-assign": "error",
+      "no-self-compare": "warn",
+      "no-throw-literal": "error",
+      "no-unneeded-ternary": "error",
+      "prefer-const": "error",
+      "radix": "warn",
+      "vars-on-top": "warn",
+      "yoda": "warn",
+
       "vue/attribute-hyphenation": "error",
       "vue/attributes-order": "warn",
       "vue/html-quotes": "warn",
