--- a/frontend_store/package.json
+++ b/frontend_store/package.json
@@ -26,6 +26,7 @@
     "mdb-ui-kit": "^7.2.0",
     "pinia": "^2.1.7",
     "unhead": "^1.9.5",
+    "universal-cookie": "^7.1.4",
     "vue": "^3.4.21",
     "vue-i18n": "^9.13.0",
     "vue-image-zoomer": "^2.2.3",
