--- a/frontend_store/package.json
+++ b/frontend_store/package.json
@@ -17,6 +17,7 @@
     "@intlify/unplugin-vue-i18n": "^4.0.0",
     "@mdi/font": "^6.7.96",
     "@vueuse/core": "^10.9.0",
+    "@vueuse/integrations": "^10.9.0",
     "autoprefixer": "^10.4.2",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
