--- a/frontend_quasar/jsconfig.json
+++ b/frontend_quasar/jsconfig.json
@@ -26,6 +26,9 @@
       "stores/*": [
         "src/stores/*"
       ],
+      "composables/*": [
+        "src/composables/*"
+      ],
       "vue$": [
         "node_modules/vue/dist/vue.runtime.esm-bundler.js"
       ]
