--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,7 @@
             "path": "frontend_store",
             "detail": "Starts the application with NPM",
             "label": "e-commerce: start",
+            "isBackground": true,
             "problemMatcher": ["$eslint-stylish", "$vite"]
         }
     ]
