--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,11 +5,15 @@
 
 version: 2
 updates:
-  - package-ecosystem: "pip" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "pip"
+    directory: "/"
     schedule:
       interval: "monthly"
   - package-ecosystem: "npm"
-    directory: "/frontend"
+    directory: "/frontend_store"
+    schedule:
+      interval: "monthly"
+  - package-ecosystem: "npm"
+    directory: "/frontend_quasar"
     schedule:
       interval: "monthly"
