--- a/frontend_store/package.json
+++ b/frontend_store/package.json
@@ -38,6 +38,9 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
     "@unhead/addons": "^1.9.7",
     "@unhead/schema-org": "^1.9.5",
     "@vitejs/plugin-vue": "^5.0.4",
