--- a/frontend_store/package.json
+++ b/frontend_store/package.json
@@ -38,6 +38,7 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@stripe/stripe-js": "^4.1.0",
     "@types/lodash": "^4.17.7",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
@@ -49,6 +50,8 @@
     "postcss": "^8.4.14",
     "vite": "^5.2.0",
     "vite-plugin-eslint": "^1.8.1",
-    "vitest": "^1.5.0"
+    "vite-plugin-pwa": "^0.20.0",
+    "vitest": "^1.5.0",
+    "vue-stripe-js": "^1.0.2"
   }
 }
