--- a/shop_store/.env
+++ b/shop_store/.env
@@ -1,6 +1,6 @@
 VITE_DEVELOPMENT_URL="http://127.0.0.1:8000"
 
-VITE_PRODUCTION_URL="http://127.0.0.1:8000"
+VITE_PRODUCTION_URL="http://example.com"
 
 VITE_DEVELOPMENT_API_URL="http://127.0.0.1:8000/api/v1/"
 
@@ -13,3 +13,5 @@ VITE_STRIPE_ACCOUNT=sk_test_51COEQsJzoIwK4uQ6yJS1y99OvgVsushbiB25WwJ4qcpYU9PF2y5
 VITE_STRIPE_API_VERSION="2024-06-20"
 
 VITE_STRIPE_LOCALE="fr"
+
+VITE_DEVELOPMENT_SIGNUP_URL = 'http://127.0.0.1:8000/accounts/signup'
