--- a/shop-mobile/package.json
+++ b/shop-mobile/package.json
@@ -19,15 +19,18 @@
     "@capacitor/status-bar": "6.0.1",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
-    "ionicons": "^7.0.0",
-    "vue": "^3.3.0",
-    "vue-router": "^4.2.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "universal-cookie": "^7.1.4",
     "@mdi/font": "^6.7.96",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/integrations": "^10.9.0",
+    "ionicons": "^7.0.0",
+    "vue": "^3.3.0",
+    "vue-router": "^4.2.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "mdb-ui-kit": "^7.2.0",
