Prepare for typescript

--- a/shop-mobile/package.json
+++ b/shop-mobile/package.json
@@ -17,28 +17,31 @@
     "@capacitor/haptics": "6.0.1",
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
-    "@ionic/vue": "^8.0.0",
-    "@ionic/vue-router": "^8.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
-    "universal-cookie": "^7.1.4",
+    "@ionic/vue": "^8.0.0",
+    "@ionic/vue-router": "^8.0.0",
     "@mdi/font": "^6.7.96",
     "@vueuse/core": "^10.9.0",
     "@vueuse/integrations": "^10.9.0",
-    "ionicons": "^7.0.0",
-    "vue": "^3.3.0",
-    "vue-router": "^4.2.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "mdb-ui-kit": "^7.2.0",
     "dayjs": "^1.11.10",
-    "pinia": "^2.1.7"
+    "ionicons": "^7.0.0",
+    "mdb-ui-kit": "^7.2.0",
+    "pinia": "^2.1.7",
+    "swiper": "^11.1.12",
+    "universal-cookie": "^7.1.4",
+    "vue": "^3.3.0",
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@capacitor/cli": "6.1.2",
+    "@stripe/stripe-js": "^4.1.0",
+    "@types/lodash": "^4.17.7",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -51,10 +54,8 @@
     "typescript": "^5.1.6",
     "vite": "~5.2.0",
     "vitest": "^0.34.6",
-    "vue-tsc": "^2.0.22",
     "vue-stripe-js": "^1.0.2",
-    "@stripe/stripe-js": "^4.1.0",
-    "@types/lodash": "^4.17.7"
+    "vue-tsc": "^2.0.22"
   },
   "description": "An Ionic project"
 }
