--- a/shop_store_ts/package.json
+++ b/shop_store_ts/package.json
@@ -43,6 +43,8 @@
     "@types/lodash": "^4.17.7",
     "@unhead/addons": "^1.9.7",
     "@unhead/schema-org": "^1.9.5",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
     "typescript": "^5.5.3",
     "eslint": "^8.57.0",
     "postcss": "^8.4.14",
