--- a/shop_store_ts/tsconfig.json
+++ b/shop_store_ts/tsconfig.json
@@ -1,9 +1,16 @@
 {
   "compilerOptions": {
     "strict": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ],
+      "src": [
+        "./src/*"
+      ]
+    },
   },
-  "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
