--- a/shop_store_ts/tsconfig.json
+++ b/shop_store_ts/tsconfig.json
@@ -1,18 +1,19 @@
 {
+  /* Set by us */
   "compilerOptions": {
-    "strict": true,
     "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "baseUrl": "./",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "src": [
-        "./src/*"
-      ]
-    },
+      "@/*": ["./src/*"]
+    }
   },
   "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.node.json"
+    }
   ]
 }
