--- a/shop_store_ts/package.json
+++ b/shop_store_ts/package.json
@@ -29,30 +29,31 @@
     "mdb-ui-kit": "^7.2.0",
     "pinia": "^2.1.7",
     "unhead": "^1.9.5",
+    "universal-cookie": "^6.1.3",
+    "vue": "^3.4.37",
     "vue-i18n": "^9.13.0",
     "vue-image-zoomer": "^2.2.3",
     "vue-router": "^4.3.0",
     "vuetify": "^3.3.23",
-    "webfontloader": "^1.6.28",
-    "vue": "^3.4.37"
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@types/node": "^22.5.2",
-    "@vitejs/plugin-vue": "^5.1.2",
     "@stripe/stripe-js": "^4.1.0",
     "@types/lodash": "^4.17.7",
-    "@unhead/addons": "^1.9.7",
-    "@unhead/schema-org": "^1.9.5",
+    "@types/node": "^22.5.4",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
-    "typescript": "^5.5.3",
+    "@unhead/addons": "^1.9.7",
+    "@unhead/schema-org": "^1.9.5",
+    "@vitejs/plugin-vue": "^5.1.2",
     "eslint": "^8.57.0",
     "postcss": "^8.4.14",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-pwa": "^0.20.0",
     "vitest": "^1.5.0",
     "vue-stripe-js": "^1.0.2",
-    "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
   }
 }
