--- a/shop_store_ts/tsconfig.json
+++ b/shop_store_ts/tsconfig.json
@@ -4,8 +4,10 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "baseUrl": "./",
+    "esModuleInterop": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"],
+      "src": ["src/*"]
     }
   },
   "references": [
