Update TS files

--- a/shop_store_ts/tsconfig.json
+++ b/shop_store_ts/tsconfig.json
@@ -5,6 +5,7 @@
     "strict": true,
     "baseUrl": "./",
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "paths": {
       "@/*": ["src/*"],
       "src": ["src/*"]
