--- a/shop_store_ts/package.json
+++ b/shop_store_ts/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
     "eslint-plugin-vue": "^9.22.0",
+    "happy-dom": "^15.7.4",
     "lodash": "^4.17.21",
     "mdb-ui-kit": "^7.2.0",
     "pinia": "^2.1.7",
