--- a/shop_store_ts/tsconfig.json
+++ b/shop_store_ts/tsconfig.json
@@ -7,8 +7,12 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "paths": {
-      "@/*": ["src/*"],
-      "src": ["src/*"]
+      "@/*": [
+        "src/*"
+      ],
+      "src": [
+        "src/*"
+      ]
     }
   },
   "references": [
