--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.21",
     "mdb-ui-kit": "^7.2.0",
     "pinia": "^2.1.7",
+    "sass": "^1.80.6",
     "unhead": "^1.9.5",
     "universal-cookie": "^6.1.3",
     "vue": "^3.4.37",
