--- a/frontend_nuxt/package.json
+++ b/frontend_nuxt/package.json
@@ -15,6 +15,7 @@
     "@nuxt/eslint": "^0.7.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@pinia/nuxt": "^0.7.0",
+    "@unlok-co/nuxt-stripe": "^4.0.1",
     "@vesp/nuxt-fontawesome": "^1.1.0",
     "@vueuse/core": "^11.2.0",
     "@vueuse/nuxt": "^11.2.0",
@@ -22,6 +23,8 @@
     "bootstrap": "^5.3.3",
     "mdb-ui-kit": "^8.1.0",
     "nuxt": "^3.14.1592",
+    "nuxt-clarity-analytics": "^0.0.9",
+    "nuxt-gtag": "^3.0.2",
     "pinia": "^2.2.6",
     "vue": "latest",
     "vue-router": "latest"
