--- a/frontend_nuxt/package.json
+++ b/frontend_nuxt/package.json
@@ -37,6 +37,7 @@
     "@nuxt/test-utils": "^3.14.4",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^15.11.6",
+    "playwright-core": "^1.49.0",
     "sass-embedded": "^1.81.0",
     "typescript": "^5.6.3",
     "vitest": "^2.1.5",
