--- a/frontend_nuxt/package.json
+++ b/frontend_nuxt/package.json
@@ -36,7 +36,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@nuxt/test-utils": "^3.14.4",
+    "@testing-library/vue": "^8.1.0",
     "@vue/test-utils": "^2.4.6",
+    "axios-mock-adapter": "^2.1.0",
     "happy-dom": "^15.11.6",
     "playwright-core": "^1.49.0",
     "sass-embedded": "^1.81.0",
