Setting up routing + Types

--- a/frontend_nuxt/package.json
+++ b/frontend_nuxt/package.json
@@ -15,17 +15,22 @@
   "dependencies": {
     "@nuxt/eslint": "^0.7.0",
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/robots": "^4.1.11",
+    "@nuxtjs/sitemap": "^6.1.5",
     "@pinia/nuxt": "^0.7.0",
     "@unlok-co/nuxt-stripe": "^4.0.1",
     "@vesp/nuxt-fontawesome": "^1.1.0",
     "@vueuse/core": "^11.2.0",
+    "@vueuse/integrations": "^11.3.0",
     "@vueuse/nuxt": "^11.2.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "mdb-ui-kit": "^8.1.0",
     "nuxt": "^3.14.1592",
     "nuxt-clarity-analytics": "^0.0.9",
     "nuxt-gtag": "^3.0.2",
+    "nuxt-openapi-docs-module": "^5.3.1",
     "pinia": "^2.2.6",
     "vue": "latest",
     "vue-router": "latest"
