--- a/frontend_nuxt/package.json
+++ b/frontend_nuxt/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.7.0",
+    "@nuxt/image": "^1.8.1",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/robots": "^4.1.11",
     "@nuxtjs/sitemap": "^6.1.5",
