--- a/frontend_nuxt/package.json
+++ b/frontend_nuxt/package.json
@@ -16,6 +16,7 @@
     "@nuxt/eslint": "^0.7.0",
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/i18n": "^9.1.0",
     "@nuxtjs/robots": "^4.1.11",
     "@nuxtjs/sitemap": "^6.1.5",
     "@pinia/nuxt": "^0.7.0",
@@ -45,6 +46,7 @@
     "@testing-library/vue": "^8.1.0",
     "@vue/test-utils": "^2.4.6",
     "axios-mock-adapter": "^2.1.0",
+    "fake-indexeddb": "^6.0.0",
     "happy-dom": "^15.11.6",
     "playwright-core": "^1.49.0",
     "sass-embedded": "^1.81.0",
