--- a/frontend_nuxt/package.json
+++ b/frontend_nuxt/package.json
@@ -33,6 +33,7 @@
     "nuxt-clarity-analytics": "^0.0.9",
     "nuxt-gtag": "^3.0.2",
     "nuxt-openapi-docs-module": "^5.3.1",
+    "vue-stripe-js": "^1.0.2",
     "pinia": "^2.2.6",
     "vue": "latest",
     "vue-router": "latest"
@@ -42,6 +43,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@stripe/stripe-js": "^4.1.0",
     "@nuxt/test-utils": "^3.14.4",
     "@testing-library/vue": "^8.1.0",
     "@vue/test-utils": "^2.4.6",
