--- a/frontend_nuxt/package.json
+++ b/frontend_nuxt/package.json
@@ -33,18 +33,20 @@
     "nuxt-clarity-analytics": "^0.0.9",
     "nuxt-gtag": "^3.0.2",
     "nuxt-openapi-docs-module": "^5.3.1",
-    "vue-stripe-js": "^1.0.2",
     "pinia": "^2.2.6",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-sonner": "^1.3.0",
+    "vue-stripe-js": "^1.0.2",
+    "zod": "^3.23.8"
   },
   "packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a",
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@stripe/stripe-js": "^4.1.0",
     "@nuxt/test-utils": "^3.14.4",
+    "@stripe/stripe-js": "^4.1.0",
     "@testing-library/vue": "^8.1.0",
     "@vue/test-utils": "^2.4.6",
     "axios-mock-adapter": "^2.1.0",
