--- a/frontend_nuxt/package.json
+++ b/frontend_nuxt/package.json
@@ -13,6 +13,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@artmizu/nuxt-prometheus": "2.4.0",
     "@nuxt/eslint": "^0.7.0",
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/google-fonts": "^3.2.0",
@@ -28,6 +29,8 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dayjs-nuxt": "2.1.11",
+    "firebase": "^11.0.2",
     "mdb-ui-kit": "^8.1.0",
     "nuxt": "^3.14.1592",
     "nuxt-clarity-analytics": "^0.0.9",
