--- a/frontend_nuxt/package.json
+++ b/frontend_nuxt/package.json
@@ -29,7 +29,6 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "dayjs-nuxt": "2.1.11",
     "firebase": "^11.0.2",
     "mdb-ui-kit": "^8.1.0",
     "nuxt": "^3.14.1592",
@@ -37,6 +36,7 @@
     "nuxt-gtag": "^3.0.2",
     "nuxt-openapi-docs-module": "^5.3.1",
     "pinia": "^2.2.6",
+    "prom-client": "^15.1.3",
     "vue": "latest",
     "vue-router": "latest",
     "vue-sonner": "^1.3.0",
