--- a/frontend_nuxt/package.json
+++ b/frontend_nuxt/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "firebase": "^11.0.2",
+    "lodash": "^4.17.21",
     "mdb-ui-kit": "^8.1.0",
     "nuxt": "^3.14.1592",
     "nuxt-clarity-analytics": "^0.0.9",
