--- a/shop-mobile/package.json
+++ b/shop-mobile/package.json
@@ -34,6 +34,9 @@
     "ionicons": "^7.0.0",
     "mdb-ui-kit": "^7.2.0",
     "pinia": "^2.1.7",
+    "firebase": "^11.0.2",
+    "zod": "^3.23.8",
+    "vue-stripe-js": "^1.0.2",
     "swiper": "^11.1.12",
     "universal-cookie": "^7.1.4",
     "vue": "^3.3.0",
@@ -51,6 +54,8 @@
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
+    "happy-dom": "^15.11.6",
+    "playwright-core": "^1.49.0",
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
     "vite": "~5.2.0",
