--- a/shop-mobile/tsconfig.node.json
+++ b/shop-mobile/tsconfig.node.json
@@ -3,6 +3,7 @@
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
+    "strict": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true
   },
