--- a/frontend_nuxt/package.json
+++ b/frontend_nuxt/package.json
@@ -23,6 +23,7 @@
     "@pinia/nuxt": "^0.7.0",
     "@unlok-co/nuxt-stripe": "^4.0.1",
     "@vesp/nuxt-fontawesome": "^1.1.0",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vueuse/core": "^11.2.0",
     "@vueuse/integrations": "^11.3.0",
     "@vueuse/nuxt": "^11.2.0",
