--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "firebase": "^11.0.2",
     "lodash": "^4.17.21",
     "mdb-ui-kit": "^8.1.0",
