--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "nuxt-openapi-docs-module": "^5.3.1",
     "pinia": "^2.2.6",
     "prom-client": "^15.1.3",
+    "qrcode": "1",
     "vue": "latest",
     "vue-router": "latest",
     "vue-sonner": "^1.3.0",
