--- a/frontend_mobile/package.json
+++ b/frontend_mobile/package.json
@@ -17,6 +17,7 @@
     "@capacitor/haptics": "6.0.1",
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
+    "@capacitor/toast": "^7.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
@@ -28,19 +29,18 @@
     "@vueuse/core": "^10.9.0",
     "@vueuse/integrations": "^10.9.0",
     "axios": "^1.6.8",
-    "webfontloader": "^1.6.28",
-    "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
+    "firebase": "^11.0.2",
     "ionicons": "^7.0.0",
     "mdb-ui-kit": "^7.2.0",
     "pinia": "^2.1.7",
-    "firebase": "^11.0.2",
-    "zod": "^3.23.8",
-    "vue-stripe-js": "^1.0.2",
     "swiper": "^11.1.12",
     "universal-cookie": "^7.1.4",
     "vue": "^3.3.0",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vue-stripe-js": "^1.0.2",
+    "webfontloader": "^1.6.28",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@capacitor/cli": "6.1.2",
@@ -53,8 +53,8 @@
     "cypress": "^13.5.0",
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
-    "jsdom": "^22.1.0",
     "happy-dom": "^15.11.6",
+    "jsdom": "^22.1.0",
     "playwright-core": "^1.49.0",
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
