Refactoring cart modals

--- a/frontend_mobile/package.json
+++ b/frontend_mobile/package.json
@@ -26,6 +26,7 @@
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "@mdi/font": "^6.7.96",
+    "@unhead/vue": "^1.11.18",
     "@vueuse/core": "^10.9.0",
     "@vueuse/integrations": "^10.9.0",
     "axios": "^1.6.8",
