--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "vue-router": "latest",
     "vue-sonner": "^1.3.0",
     "vue-stripe-js": "^1.0.3",
+    "vuefire": "^3.2.1",
     "zod": "^3.23.8"
   },
   "packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a",
