--- a/frontend_mobile/package.json
+++ b/frontend_mobile/package.json
@@ -42,6 +42,7 @@
     "vue-router": "^4.2.0",
     "vue-stripe-js": "^1.0.2",
     "webfontloader": "^1.6.28",
+    "vuefire": "^3.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
